[package]
name = "email-client"
version = "0.1.0"
authors = ["LinG <lingxiang.wang@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.4"
error-chain = "0.12.2"
futures = "0.3"
 tokio = { version = "0.2", features = ["full"]  }
