[package]
name = "email-client"
version = "0.1.0"
authors = ["LinG <w93163red@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
imap = "2.0"
base64 = "0.12"
native-tls = "0.2.2"
regex = "1.0"
bufstream = "0.1"
imap-proto = "0.10.0"
nom = "5.0"
chrono = "0.4"
lazy_static = "1.4"
